--- a/index.html
+++ b/index.html
@@ -1,138 +1,15 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Shakur | Portfolio</title>
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <!DOCTYPE html>
+  <html lang="en">
+    <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Personal Website for Shakur</title>
+    </head>
 
-  <style>
-    :root{
-      --primary:#28a745;
-      --secondary:#ffc107;
-      --dark:#111;
-      --muted:#555;
-      --bg:#f8f9fa;
-      --shadow:0 6px 18px rgba(0,0,0,0.08);
-    }
-    *{box-sizing:border-box}
-    body{margin:0;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial;background:var(--bg);color:var(--dark)}
-    img{max-width:100%;display:block}
-    a{text-decoration:none;color:inherit}
-
-    header{position:fixed;top:0;left:0;right:0;background:#fff;box-shadow:var(--shadow);z-index:50}
-    .nav{max-width:1100px;margin:0 auto;display:flex;justify-content:space-between;align-items:center;padding:14px 20px}
-    .nav .logo{font-weight:700;font-size:1.25rem;color:var(--primary)}
-    .nav ul{display:flex;list-style:none;margin:0;padding:0;gap:20px}
-    .nav ul li a{padding:8px 12px;border-radius:6px}
-    .nav ul li a:hover{background:var(--secondary);color:#000}
-
-    .hero{
-      min-height:90vh;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      text-align:center;
-      color:#fff;
-      padding:20px;
-      position:relative;
-      overflow:hidden;
-      background-image: url('https://images.unsplash.com/photo-1549490349-01127027b14d?q=80&w=2670&auto=format&fit=crop');
-      background-size: cover;
-      background-position: center;
-    }
-    .hero::after{content:'';position:absolute;top:0;left:0;right:0;bottom:0;background:rgba(0,0,0,0.55);z-index:-1}
-    .hero h1{font-size:2.8rem;margin-bottom:10px;color:var(--secondary)}
-    .hero p{font-size:1.2rem;max-width:700px;margin:0 auto 20px}
-    .btn{display:inline-block;padding:12px 20px;border-radius:8px;font-weight:600}
-    .btn-primary{background:var(--primary);color:#fff}
-    .btn-primary:hover{background:#1f7a34}
-
-    section{padding:80px 20px;max-width:1100px;margin:0 auto}
-    h2.section-title{text-align:center;font-size:2rem;margin-bottom:40px;color:var(--primary)}
-
-    .about{display:block;text-align:center;max-width:800px;margin:0 auto}
-    .about p{line-height:1.6;color:var(--muted)}
-
-    .services{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:24px}
-    .service{background:#fff;padding:24px;border-radius:12px;box-shadow:var(--shadow);text-align:center}
-    .service i{font-size:2rem;color:var(--primary);margin-bottom:12px}
-    .service h3{margin:10px 0}
-    .service p{color:var(--muted)}
-
-    .contact{text-align:center}
-    .contact p{margin-bottom:20px;color:var(--muted)}
-    .contact a{display:inline-block;margin:8px;padding:10px 18px;border-radius:8px;background:var(--secondary);color:#000;font-weight:600}
-
-    footer{background:#fff;text-align:center;padding:20px;color:var(--muted)}
-  </style>
-</head>
-<body>
-  <header>
-    <nav class="nav">
-      <div class="logo">Shakur</div>
-      <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <section class="hero">
-    <div>
-      <h1>Shakur</h1>
-      <p>Cyber Analyst | Islamic Entrepreneur | History Instructor</p>
-      <a href="#contact" class="btn btn-primary">Get in Touch</a>
-    </div>
-  </section>
-
-  <section id="about">
-    <h2 class="section-title">About Me</h2>
-    <div class="about">
-      <p>Assalamu Alaikum, I’m Shakur. I am a Cyber Analyst, Islamic Entrepreneur, and History Instructor with a passion for blending technology, faith, and education. My mission is to empower others through knowledge while maintaining balance between professional excellence and spiritual growth. I aim to make meaningful contributions to the tech industry and the Muslim community alike.</p>
-    </div>
-  </section>
-
-  <section id="services">
-    <h2 class="section-title">What I Do</h2>
-    <div class="services">
-      <div class="service">
-        <i class="fa fa-shield-halved"></i>
-        <h3>Cyber Analyst</h3>
-        <p>Protecting digital assets through security analysis, risk management, and proactive defense strategies.</p>
-      </div>
-      <div class="service">
-        <i class="fa fa-mosque"></i>
-        <h3>Islamic Entrepreneur</h3>
-        <p>Building ethical businesses inspired by Islamic values, fostering community growth and halal opportunities.</p>
-      </div>
-      <div class="service">
-        <i class="fa fa-book-open"></i>
-        <h3>History Instructor</h3>
-        <p>Teaching and presenting historical knowledge with engaging storytelling that connects past lessons to modern life.</p>
-      </div>
-    </div>
-  </section>
-
-  <section id="contact">
-    <h2 class="section-title">Contact Me</h2>
-    <div class="contact">
-      <p>Interested in working together or learning more? Reach out to me through the channels below:</p>
-      <a href="mailto:shakur@example.com"><i class="fa fa-envelope"></i> Email</a>
-      <a href="https://www.linkedin.com" target="_blank"><i class="fa fa-linkedin"></i> LinkedIn</a>
-      <a href="https://twitter.com" target="_blank"><i class="fa fa-twitter"></i> Twitter</a>
-    </div>
-  </section>
-
-  <footer>
-    <p>&copy; <span id="year"></span> Shakur | All Rights Reserved</p>
-  </footer>
-
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
-</body>
-</html>
+    <body>
+      <div id="root"></div>
+      <script type="module" src="/src/main.tsx"></script>
+    </body>
+  </html>
+  
